Bug 29999 - Mesa git does not build on openSUSE because of serious compiler warnings
Summary: Mesa git does not build on openSUSE because of serious compiler warnings
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/R600 (show other bugs)
Version: git
Hardware: All Linux (All)
: medium blocker
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-03 09:01 UTC by Johannes Obermayr
Modified: 2010-09-03 09:15 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Johannes Obermayr 2010-09-03 09:01:36 UTC
https://build.opensuse.org/package/rawlog?arch=i586&package=Mesa&project=home%3Ajobermayr&repository=openSUSE_11.3

I: Program returns random data in a function
E: Mesa no-return-in-nonvoid-function evergreen_fragprog.c:817
E: Mesa no-return-in-nonvoid-function evergreen_vertprog.c:736

evergreen_fragprog.c:817: warning: control reaches end of non-void function
evergreen_vertprog.c:736: warning: control reaches end of non-void function

I reported it on #dri-devel already (2010-09-01) without any answers ...
Comment 1 Alex Deucher 2010-09-03 09:15:11 UTC
fixed in:
7e282b8e62fb5d237a2e2cc94ac6a39a2f73f271


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.