r600c: add proper returns for some evergreen functions

these weren't checked anyway.

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=29999