src/mesa/drivers/dri/r600/evergreen_vertprog.c
@@ -733,4 +733,7 @@ GLboolean evergreenSetupVPconstants(GLcontext * ctx)
         }
         unConstOffset += pCompiledSub->NumParameters;
     }
+
+    return GL_TRUE;
 }
+
